# fastrack

./: .gitignore  CHANGELOG.md  LICENSE  PR_DESCRIPTION.md  README.md  compare_fast_rank.py  compare_linking.py  config.example.toml  config.perturb.example.toml  config.plus.example.toml  datasets.example.csv  mylist.csv  profile_frame.py  pyproject.toml  requirements.txt
docs/: PR_fastplus_directional.md  fastplus.md  fastplus_parallel_verification.md  gpu_feasibility.md  ridge_detector_integration.md
fastrack/: __init__.py  cli.py  lima.py  motility.py  pipeline.py  plotparams.py  stack2tifs.py
hpc/: README.md  env.sh  fast_batch_array.sbatch  fast_single.sbatch  manifest_count.py
src/fastrack/: __init__.py  config.py  datamodel.py  motility.py  registry.py
src/fastrack/analysis/: __init__.py  fitting.py  frame_average.py  geometry.py  kinetics.py  perturbation.py  velocity.py
src/fastrack/cli/: __init__.py
src/fastrack/core/: __init__.py  _kernels.py  filament.py  frame.py  island.py  link.py  motility.py
src/fastrack/core/detection/: __init__.py  base.py  entropy.py  heads.py  ridge.py
src/fastrack/core/input/: __init__.py  base.py  mm_dir.py  tiff_stack.py
src/fastrack/core/tracking/: __init__.py  base.py  greedy.py  head_tracker.py
src/fastrack/io/: __init__.py  convert.py  detection_cache.py  dual_channel.py  export.py  images.py
src/fastrack/io/movie/: __init__.py  base.py  ffmpeg.py
src/fastrack/io/stores/: __init__.py  base.py  npy_store.py  npz_store.py
src/fastrack/pipelines/: __init__.py  base.py  batch.py  directional.py  discovery.py  gliding.py  loaded.py
src/fastrack/polarity/: __init__.py  association.py  datamodel.py  disambiguation.py  overlay.py  scoring.py  spot.py
src/fastrack/viz/: __init__.py  plots.py
tests/: test_batch.py  test_config.py  test_datamodel.py  test_discovery.py  test_export.py  test_fastplus_directional.py  test_golden.py  test_input.py  test_movie.py  test_registry.py  test_ridge.py  test_smoke.py  test_stack_pipeline.py  test_stores.py  test_tracking.py
tests/baseline/: MANIFEST.sha256
tests/baseline/micromanager_tifs__pt_none__n_5__ymax_1500__p_5__fx_none/: micromanager_tifs_032714_slide_2_alpha_0.04mg_ml__1_full_length_velocity.txt  micromanager_tifs_032714_slide_2_alpha_0.04mg_ml__1_max_length_velocity.txt  micromanager_tifs_032714_slide_2_alpha_0.04mg_ml__2_full_length_velocity.txt  micromanager_tifs_032714_slide_2_alpha_0.04mg_ml__2_max_length_velocity.txt  micromanager_tifs_032714_slide_2_beta_0.04mg_ml__1_full_length_velocity.txt  micromanager_tifs_032714_slide_2_beta_0.04mg_ml__1_max_length_velocity.txt  micromanager_tifs_032714_slide_2_beta_0.04mg_ml__2_full_length_velocity.txt  micromanager_tifs_032714_slide_2_beta_0.04mg_ml__2_max_length_velocity.txt
tools/: benchmark_fastplus_parallel.py  capture_baseline.py  compare_detectors.py  compare_fast_rank.py  compare_linking.py  profile_frame.py
(+7 files in other folders)
