[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastrack"
version = "2.0.0"
description = "Fast Actin filament Spud Trekker - automated actin gliding-assay analysis (Python 3 port)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Tural Aksel", email = "turalaksel@gmail.com" },
]
maintainers = [
    { name = "Modernized Python 3 port" },
]
keywords = ["actin", "motility", "gliding-assay", "image-analysis", "biophysics"]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-image>=0.20",
    "opencv-python>=4.6",
    "matplotlib>=3.6",
    "imageio>=2.19",
    "pillow>=9.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
fast = "fastrack.cli:fast_main"
lima = "fastrack.cli:lima_main"
stack2tifs = "fastrack.cli:stack2tifs_main"

[tool.setuptools]
packages = ["fastrack"]
