[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastrack"
version = "3.0.0"
description = "Fast Actin filament Spud Trekker - automated actin gliding-assay analysis (Python 3 port)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Tural Aksel", email = "turalaksel@gmail.com" },
]
maintainers = [
    { name = "Modernized Python 3 port" },
]
keywords = ["actin", "motility", "gliding-assay", "image-analysis", "biophysics"]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-image>=0.20",
    "opencv-python>=4.6",
    "matplotlib>=3.6",
    "imageio>=2.19",
    "pillow>=9.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
# Optional ridge-detection filament detector (fast -d <dir> --detector ridge).
# The upstream ridge-detector imports numba (`from numba import jit`) but does
# NOT declare it as a dependency, so we add numba explicitly here.  numba (with
# llvmlite/LLVM) is the only heavy addition -- which is exactly why this detector
# is opt-in and kept out of the default install.
ridge = ["ridge-detector>=0.1.3", "numba>=0.59"]
# Speed-optimized drop-in (fast -d <dir> --detector ridge-fast), ~4x faster and
# numerically identical to `ridge`.  Distributed as `ridge-detector-fast` and
# installed from git (not on PyPI); it pulls in the base ridge-detector + numba.
ridge-fast = ["ridge-detector-fast @ git+https://github.com/paulruijgrok/ridge-detector"]
# Read .xlsx dataset manifests with fast-batch (CSV/TSV need no extra dependency).
batch = ["openpyxl>=3.0"]

[project.scripts]
fast = "fastrack.cli:fast_main"
lima = "fastrack.cli:lima_main"
stack2tifs = "fastrack.cli:stack2tifs_main"
fast-batch = "fastrack.cli:fast_batch_main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
